<resources>
    <string name="app_name">SCModule</string>
    <string name="common_ok_label">OK</string>
    <string name="common_cancel_label">キャンセル</string>
    <string name="common_edit_label">届先編集</string>
    <string name="common_loading">荷積み...</string>
    <string name="common_year">年</string>
    <string name="common_yen">¥</string>
    <string name="common_point">pt</string>
    <string name="common_save">保存</string>
    <string name="common_cancel">キャンセル</string>
    <string name="common_edit">編集</string>
    <string name="common_email_update">確認</string>
    <string name="common_confirm">確認</string>
    <string name="common_like_product">お気に入り\nに追加</string>
    <string name="common_unlike_product">お気に入り\n解除</string>
    <string name="common_follow_shop">ショップをフォロー</string>
    <string name="common_unfollow_shop">フォロー解除</string>
    <string name="common_date">%3$s年%2$s月%1$s日</string>
    <string name="common_count"> 限</string>
    <string name="dialog_error_title">エラー</string>
    <string name="dialog_confirm_title">確認</string>
    <string name="dialog_exchange_stage_1_title">以下の内容で取引します。</string>
    <string name="dialog_exchange_stage_2_title">ご利用ありがとうございました。</string>
    <string name="dialog_tadacopy_new_app_title">タダコピアプリのリニューアルを行いました。</string>
    <string name="dialog_canpass_new_app_title">CAN>PASSアプリのリニューアルを行いました。</string>
    <string name="dialog_choose_image_title">写真を選択</string>
    <string name="dialog_update_email_title">メールアドレスを変更しますか？</string>
    <string name="dialog_update_email_body">メールアドレスの変更をした場合、変更前のメールアドレスの会員情報は失われます。また、過去に登録した事のあるメールアドレスに変更する事は出来ません。ご注意ください。</string>
    <string name="dialog_no_internet_connection">接続状態を確認してください。</string>
    <string name="dialog_login_fail">メールアドレスまたはパスワードが違います。</string>
    <string name="dialog_register_success">%1$s\n宛てにメールを送信しました。\nメールでの認証をお願いします。\n完了したらOKを押してください。</string>
    <string name="dialog_register_wrong_email_format">メールアドレスを正しく入力してください。 </string>
    <string name="dialog_register_failed_authenticate">認証に失敗しました。</string>
    <string name="dialog_register_email_has_been_registered">すでに登録されているメールアドレスです。</string>
    <string name="dialog_register_invalid_password">パスワードは半角英数字６文字以上で入力してください。</string>
    <string name="dialog_pay_exchange_connection_fail">通信エラーが発生しました。</string>
    <string name="dialog_pay_exchange_login_fail">ログインに失敗しました。</string>
    <string name="dialog_pay_exchange_not_enough_point">ポイントが足りません。</string>
    <string name="dialog_new_app_password_require">セキュリティの強化及びサービスの質の向上の為、お手数をお掛けしますがパスワードの設定をお願い致します。</string>
    <string name="dialog_confirm_info_before_exchange"><![CDATA[こちらの商品は郵送となる為以下の項目が必須となります。<br><br>・宛名（ニックネームに記載）<br>・郵便番号<br>・住所<br>・電話番号<br><br><font color="%1$s">住所と名前が間違っている場合商品が届きません。ご注意ください。正しい宛先を修正する場合は「届先編集」より行ってください。</font>]]></string>
    <string name="dialog_title_register_success">確認メールを送信しました</string>
    <string name="dialog_content_register_success">宛に確認メールを送信しました。\n
    メール本文内の認証URLにアクセス後、アプリに戻りログインを行ってください。\n
    ※迷惑メール対策などでドメイン指定受信をしている場合\n
    「@smart-campus.jp」を指定受信設定してください。</string>
    <string name="dialog_button_register_success">確認</string>
    <string name="dialog_change_email_fail">認証に失敗しました。</string>
    <string name="dialog_email_was_registed">すでに登録されているメールアドレスです。</string>
    <string name="dialog_body_email_empty_label">メールアドレスを入力してください</string>
    <string name="dialog_body_password_empty_label">パスワードを入力してください</string>
    <string name="dialog_body_password_less_than_6_label">パスワードは半角英数字6文字以上にしてください</string>
    <string name="dialog_body_email_invalid_label">メールアドレスの形式が間違っています。\n
        正しいメールアドレスを入力してください。</string>
    <string name="dialog_body_empty_nickname">ニックネームを入力してください</string>
    <string name="dialog_body_empty_university">大学を選択してください</string>
    <string name="dialog_body_empty_department">学部を選択してください</string>
    <string name="dialog_body_empty_major">学科を選択してください</string>
    <string name="dialog_body_empty_enrollment">入学年度を選択してください</string>
    <string name="dialog_body_wrong_zipcode">郵便番号を正しく入力してください。</string>
    <string name="dialog_body_exchange_point_stage_1">名前：%1$s\nﾒｰﾙｱﾄﾞﾚｽ：%2$s\n交換商品：%3$s\n交換ポイント：%4$s\n変動ポイント：%5$s > %6$s</string>
    <string name="dialog_body_exchange_point_stage_2">賞品はポイント管理ページから確認する事が出来ます。\n「右上ユーザーアイコン」をクリック → ページ下部「賞品交換履歴」\n(賞品によって反映までに１日〜１週間程かかる事があります。)</string>
    <string name="dialog_login_confirm">旧アプリ会員の方は\n「Mailアドレス登録/ログイン」から\n旧アプリに登録していたメールアドレスで\n登録を行ってください</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="copyright">Copyright (c) 2015 Oceanize inc. all rights reserved.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="introduction_app">タダコピアプリを利用するには、\nスマートキャンパスへの登録が必要です。</string>
    <string name="introduction_account">スマートキャンパスとはOceanizeが提供する\nアプリのIDとポイントを統合して登録できるアカウントです。</string>
    <string name="introduction_select_login">以下より方法登録方法を選択してください。</string>
    <string name="button_login_facebook">Facebook IDで登録</string>
    <string name="button_login_twitter">Twitter IDで登録</string>
    <string name="button_login_email">メールアドレスで登録</string>
    <string name="quest_mode">ゲストモードで続ける＞</string>
    <string name="title_activity_register_email">RegisterEmailActivity</string>
    <string name="next">次へ</string>
    <string name="login">ログイン</string>
    <string name="back_to_login"> 登録方法選択に戻る</string>
    <string name="register">新規登録</string>
    <string name="transfer">引き継ぎ申請</string>
    <string name="email_update">更新</string>
    <string name="email">メールアドレス</string>
    <string name="email_update_hint">更新後のメールアドレスを入力</string>
    <string name="title_edit_email">メールアドレス更新</string>
    <string name="password">パスワード(半角英数字6文字以上)</string>
    <string name="sign_up">メールアドレスで登録</string>
    <string name="title_activity_fill_info_step1">FillInfoStep1Activity</string>
    <string name="profile_information_1">プロフィール情報１を登録 ※必須項目</string>
    <string name="nick_name">ニックネームを入力</string>
    <string name="font_family">sans-serif-light</string>
    <string name="title_activity_fill_info_step2">FillInfoStep2Activity</string>
    <string name="title_activity_edit_info_one">EditInfoOneActivity</string>
    <string name="title_activity_choosen">ChoosenActivity</string>
    <string name="edit_info_one_university">大学を選択</string>
    <string name="edit_info_one_campus">キャンパスを選択</string>
    <string name="edit_info_one_department">学部を選択</string>
    <string name="edit_info_one_major">学科を選択</string>
    <string name="edit_info_one_enrollment">入学年度を選択</string>
    <string name="title_activity_edit_info_two">EditInfoTwoActivity</string>
    <string name="edit_info_two_gender">性別を選択</string>
    <string name="edit_info_two_birthday">生年月日を選択</string>
    <string name="edit_info_two_zipcode">郵便番号を入力</string>
    <string name="edit_info_two_prefecture">都道府県を選択</string>
    <string name="edit_info_two_address">市区町村を入力</string>
    <string name="edit_info_two_tel">電話番号を入力</string>
    <string name="edit_info_two_birthday_dialog_title">生年月日設定</string>
    <string name="title_activity_scmain">SCMainActivity</string>
    <string name="scmain_oceanize_app">Oceanizeアプリ</string>
    <string name="view_all">View all</string>
    <string name="toretan_notification_on_header">今日の講義は%1$sつあります</string>
    <string name="toretan_notification_empty_header">今日の講義は...</string>
    <string name="toretan_not_install_notification_empty_footer">『トレタン』をインストールして時間割を表示する</string>
    <string name="toretan_installed_notification_empty_footer">『トレタン』で時間割を表示する</string>
    <string name="toretan_guest_footer">『トレタン』で時間割を登録する</string>
    <string name="app_notification_on_header">新しいお知らせが%1$sつあります。</string>
    <string name="app_notification_on_empty_header">新しいお知らせがありません</string>
    <string name="title_activity_profile_info">ProfileInfoActivity</string>
    <string name="title_activity_update_mail_info">UpdateMailActivity</string>
    <string name="title_activity_ecmain">ECMainActivity</string>
    <string name="title_activity_detail_shop">ECDetailShopActivity</string>
    <string name="profile_info_title">Profile</string>
    <string name="profile_info_email_label">メールアドレス</string>
    <string name="profile_info_password_label">パスワード</string>
    <string name="profile_info_nickname_label">ニックネーム</string>
    <string name="profile_info_university_label">大学</string>
    <string name="profile_info_department_label">学部</string>
    <string name="profile_info_major_label">学科</string>
    <string name="profile_info_enrollment_label">入学年</string>
    <string name="profile_info_gender_label">性別</string>
    <string name="profile_info_birthday_label">生年月日</string>
    <string name="profile_info_postcode_label">郵便番号</string>
    <string name="profile_info_prefectures_label">都道府県</string>
    <string name="profile_info_address_label">住所</string>
    <string name="profile_info_phone_label">電話番号</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="slide_menu_welcome">Hello, %1$s!</string>
    <string name="slide_menu_welcome_blank_name">Hello!</string>
    <string name="title_activity_detail_product">DetailProductActivity</string>
    <string name="ecmain_search_type_point_label">ポイントを選択してください</string>
    <string name="ecmain_search_type_category_label">カテゴリーを選択してください</string>
    <string name="ecmain_search_type_shop_label">ショップを選択してください</string>
    <string name="ecmain_header">Timeline</string>
    <string name="ecmain_search_hint">キーワードを入力してください</string>
    <string name="ecmain_tab_recent">夕イムライン</string>
    <string name="ecmain_tab_favor">人気ランキング</string>
    <string name="ecmain_tab_point">ポイント数から探す</string>
    <string name="ecmain_tab_category">カテゴリーから探す</string>
    <string name="ecmain_tab_shop">ショップから探す</string>
    <string name="ecmain_tab_keyword">キーワードから探す</string>
    <string name="ec_detail_history_exchange_date">交換日：</string>
    <string name="ec_detail_history_ship_date">有効期限：</string>
    <string name="ec_detail_history_expired_date">発送日：</string>
    <string name="ec_detail_history_product_info">商品情報：お客様のコードはこちらになります。</string>
    <string name="ec_detail_product_header">賞品詳細</string>
    <string name="ec_detail_product_go_to_shop_page">ショップページへ ＞</string>
    <string name="ec_detail_product_go_to_detail_page">商品詳細ページへ ＞</string>
    <string name="ec_detail_product_trade">交換申請</string>
    <string name="ec_confirm_login_message1">Smart Campus\nに登録して\n賞品をGETしよう！</string>
    <string name="ec_confirm_login_message2">Campus pointを貯めるには\n以下のいずれかの登録が必要です。</string>
    <string name="ec_confirm_login_facebook">Facebook登録/ログイン</string>
    <string name="ec_confirm_login_twitter">Twitter登録/ログイン</string>
    <string name="ec_confirm_login_email">Mailアドレス登録/ログイン</string>
    <string name="ec_confirm_login_cancel">ｘキャンセル</string>
    <string name="login_description_1_tadacopy">タダコピアプリのリニューアルを行いました</string>
    <string name="login_description_1_canpass">CAN>PASSアプリのリニューアルを行いました</string>
    <string name="login_description_2">セキュリティの強化及びサービス質の向上の為、お手数をお掛けしますがパスワードの設定をお願い致します。</string>
    <string name="ecdetail_shop_newest_sort">新着順</string>
    <string name="ecdetail_shop_ranking_sort">ランキング</string>
    <string name="ecdetail_shop_point_sort">ポイント数</string>
    <string name="ec_point_manager_header">ポイント管理</string>
    <string name="ec_point_chart_point_use">ポイント獲得/使用</string>
    <string name="ec_point_exchange_history">賞品交換履歴</string>
    <string name="ec_point_feature">お気に入り賞品</string>
    <string name="ec_point_shop_present">賞品をフォローしているショップ</string>
    <string name="ec_point_unlimited">無期限</string>
    <string name="ec_point_manager_common_month">月</string>
    <string name="title_activity_scscheme">SCSchemeActivity</string>
    <string name="dialog_body_password_invalid_match">パスワードが一致しません</string>
    <string name="add_group_text">団体名を選択</string>
    <string name="title_activity_main">MainActivity</string>
</resources>