<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_dark"
                tools:context="jp.co.scmodule.SCEditInfoOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="105px"
        android:paddingRight="105px">

        <ImageView
            android:id="@+id/header_lbl"
            android:layout_width="657px"
            android:layout_height="45px"
            android:layout_marginRight="21px"
            android:src="@drawable/fill_info_step_1"/>

        <EditText
            android:id="@+id/edit_info_one_et_name"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="48px"
            android:background="@android:color/white"
            android:hint="@string/nick_name"
            android:paddingLeft="33px"
            android:paddingRight="33px"
            android:singleLine="true"
            android:tag="40"
            android:textColorHint="@color/hint_color"
            android:textSize="40px"/>

        <Button
            android:id="@+id/edit_info_two_btn_gender"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="47px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_two_gender"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_one_btn_university"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_one_university"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_one_btn_department"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_one_department"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_one_btn_major"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_one_major"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_one_btn_enrollment"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_one_enrollment"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_one_btn_next"
            android:layout_width="482px"
            android:layout_height="121px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_next"
            android:tag="39"
            android:text="@string/next"
            android:textSize="39px"/>

    </LinearLayout>

    <ImageView
        android:layout_width="494px"
        android:layout_height="23px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35px"
        android:layout_marginLeft="291px"
        android:scaleType="fitXY"
        android:src="@drawable/txt_copyright_white"/>
</RelativeLayout>
