<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_dark"
                android:orientation="vertical"
                tools:context="jp.co.scmodule.SCEditInfoTwoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="105px"
        android:paddingRight="105px">

        <ImageView
            android:layout_width="658px"
            android:layout_height="45px"
            android:layout_marginRight="22px"
            android:src="@drawable/fill_info_step_2"/>

        <Button
            android:id="@+id/edit_info_two_btn_gender"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="47px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_two_gender"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_info_two_btn_birthday"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_two_birthday"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45px"
            android:orientation="horizontal">

            <jp.co.scmodule.widgets.SCSingleLineTextView
                android:layout_width="290px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:tag="39"
                android:text="@string/edit_info_two_zipcode"
                android:textColor="@android:color/white"
                android:textSize="39px"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="540px"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|right">

                <EditText
                    android:id="@+id/edit_info_two_et_zip_1"
                    android:layout_width="195px"
                    android:layout_height="120px"
                    android:background="@android:color/white"
                    android:hint="000"
                    android:maxLength="3"
                    android:numeric="decimal"
                    android:padding="32px"
                    android:singleLine="true"
                    android:tag="39"
                    android:textColorHint="@color/hint_color"
                    android:textSize="39px"/>

                <ImageView
                    android:layout_width="40px"
                    android:layout_height="8px"
                    android:layout_marginLeft="229px"
                    android:layout_marginTop="51px"
                    android:scaleType="fitXY"
                    android:src="@drawable/fill_info_step_2_zip_bridge"/>

                <EditText
                    android:id="@+id/edit_info_two_et_zip_2"
                    android:layout_width="240px"
                    android:layout_height="120px"
                    android:layout_marginLeft="300px"
                    android:background="@android:color/white"
                    android:hint="0000"
                    android:maxLength="4"
                    android:numeric="decimal"
                    android:padding="32px"
                    android:singleLine="true"
                    android:tag="39"
                    android:textColorHint="@color/hint_color"
                    android:textSize="39px"/>

            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/edit_info_two_btn_prefecture"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_type"
            android:gravity="center"
            android:tag="39"
            android:text="@string/edit_info_two_prefecture"
            android:textColor="@android:color/white"
            android:textSize="39px"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_info_two_et_address"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@android:color/white"
            android:hint="@string/edit_info_two_address"
            android:padding="33px"
            android:singleLine="true"
            android:tag="39"
            android:textColorHint="@color/hint_color"
            android:textSize="39px"/>

        <EditText
            android:id="@+id/edit_info_two_et_tel"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@android:color/white"
            android:hint="@string/edit_info_two_tel"
            android:padding="33px"
            android:singleLine="true"
            android:tag="39"
            android:textColorHint="@color/hint_color"
            android:textSize="39px"/>

        <Button
            android:id="@+id/edit_info_two_btn_next"
            android:layout_width="481px"
            android:layout_height="121px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_next"
            android:tag="39"
            android:text="@string/next"
            android:textSize="39px"/>

        <Button
            android:id="@+id/edit_info_two_btn_skip"
            android:layout_width="165px"
            android:layout_height="32px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_skip"/>

    </LinearLayout>

    <ImageView
        android:layout_width="494px"
        android:layout_height="23px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35px"
        android:layout_marginLeft="291px"
        android:scaleType="fitXY"
        android:src="@drawable/txt_copyright_white"/>


</RelativeLayout>
