<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_dark"
    tools:context="jp.co.scmodule.SCUpdateMailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144px"
        android:background="@color/main_dark">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23px"
            android:singleLine="true"
            android:ellipsize="end"
            android:tag="56"
            android:text="@string/title_edit_email"
            android:textColor="@color/common_sc_main_color"
            android:textSize="56px" />

        <ImageButton
            android:id="@+id/sc_update_email_ibtn_back"
            android:layout_width="135px"
            android:layout_height="128px"
            android:layout_marginLeft="-15px"
            android:layout_centerVertical="true"
            android:contentDescription="back"
            android:background="@drawable/common_header_btn_back_white_selector" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="523px"
            android:layout_height="40px"
            android:src="@drawable/input_update_email" />

        <EditText

            android:id="@+id/sc_update_email_et_email"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginLeft="105px"
            android:layout_marginRight="105px"
            android:layout_marginTop="43px"
            android:background="@android:color/white"
            android:hint="@string/email_update_hint"
            android:paddingLeft="33px"
            android:paddingRight="33px"
            android:singleLine="true"
            android:tag="39"
            android:textColorHint="@color/hint_color"
            android:textSize="39px" />

        <Button
            android:id="@+id/sc_update_mail_btn_update"
            android:layout_width="330px"
            android:layout_height="120px"
            android:layout_marginTop="45px"
            android:background="@drawable/selector_btn_next"
            android:tag="37"
            android:text="@string/email_update"
            android:textSize="37px"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="494px"
        android:layout_height="23px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29px"
        android:gravity="center_horizontal"
        android:src="@drawable/txt_copyright_white" />
</RelativeLayout>
