<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/notification_rl_main"
            android:layout_width="931px"
            android:layout_height="121px"
            android:layout_marginBottom="30px"
            android:background="@drawable/item_notifcation_off"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="80px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23px"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notification_tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:tag="35"
                    android:text="00"
                    android:textColor="@android:color/white"
                    android:textSize="35px" />

                <TextView
                    android:id="@+id/notification_tv_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="18"
                    android:text="@string/common_count"
                    android:textColor="@android:color/white"
                    android:textSize="18px" />

            </LinearLayout>

            <TextView
                android:id="@+id/notification_tv_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="123px"
                android:layout_marginRight="123px"
                android:ellipsize="end"
                android:singleLine="true"
                android:tag="35"
                android:textColor="@android:color/white"
                android:textSize="35px" />

            <Button
                android:id="@+id/notification_btn_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/common_sc_btn_rounded_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification_footer_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/notification_footer_tv_show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:paddingBottom="15px"
                android:layout_marginRight="41px"
                android:tag="35"
                android:text="@string/view_all"
                android:textColor="@color/common_sc_main_color"
                android:textSize="35px"
                android:visibility="visible" />

            <TextView
                android:id="@+id/notification_footer_tv_toretan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notification_footer_tv_show_all"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="39px"
                android:layout_marginTop="8px"
                android:background="@android:color/transparent"
                android:tag="35"
                android:text="@string/toretan_guest_footer"
                android:textColor="@color/common_sc_main_color"
                android:textSize="35px"
                android:textStyle="bold"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_below="@id/notification_footer_tv_toretan"
                android:background="@color/common_line_color"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
